tests/error/comprehension_errors/not_used2.err
Error: Drop violation (at $FILE:19:21)
   | 
17 | @guppy(module)
18 | def foo(ss: list[MyStruct] @owned) -> list[qubit]:
19 |     return [s.q1 for s in ss]
   |                      ^ Field `s.q2` with non-droppable type `qubit` is leaked

Guppy compilation failed due to 1 previous error
